<resources>
    <string name="app_name">Week5b</string>
    <string name="title_activity_loading">activity_loading</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="app_themes">
        <item>Select a theme</item>
        <item>Aesthetic blue/purple</item>
        <item>Dark theme</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_theme">Choose theme</string>
    <string name="music_volume">Music volume</string>
    <string name="improve_your_recommendations">Improve your recommendations</string>
    <string name="update_recommendation_system_based_on_your_likes">Update recommendation system based on your likes</string>
    <string name="home">Home</string>
    <string name="playlists">Playlists</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mymusic">MyMusic</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>