<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".SettingsActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="217dp"
        android:layout_height="26dp"
        android:entries="@array/app_themes"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_volume"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="397dp" />

    <com.google.android.material.slider.Slider
        android:layout_width="222dp"
        android:layout_height="49dp"
        android:valueFrom="0"
        android:valueTo="100"
        app:trackColor="@color/white"
        app:thumbColor="@color/gray"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/improve_your_recommendations"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="461dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="285dp"
        android:layout_height="52dp"
        android:text="@string/update_recommendation_system_based_on_your_likes"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="487dp" />



</androidx.constraintlayout.widget.ConstraintLayout>