<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

        <TextView
            android:id="@+id/txtPlaylists2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="68dp"
            android:text="@string/choose_theme"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPlaylists2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:text="@string/music_volume"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider2"
            android:layout_width="222dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:valueFrom="0"
            android:valueTo="100"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:thumbColor="@color/gray"
            app:trackColor="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/improve_your_recommendations"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="285dp"
            android:layout_height="52dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/update_recommendation_system_based_on_your_likes"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="207dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="148dp"
            android:background="#A5ACB6"
            android:entries="@array/app_themes"
            android:popupBackground="#A5ACB6"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>